--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "node": "8.2"
   },
   "dependencies": {
+    "gulp-css-url-adjuster": "^0.2.3",
     "jquery": "^3.3.1",
     "pixel-glass": "^1.0.13",
     "swiper": "^4.1.6"
